# object-detection

./: .gitignore  .pre-commit-config.yaml  count_masks.py  eval.py  pyproject.toml  requirements.in  train.py
MaskedFace/train/: mask-000.xml  mask-001.xml  mask-002.xml  mask-003.xml  mask-004.xml  mask-005.xml  mask-006.xml  mask-007.xml  mask-008.xml  mask-010.xml  mask-012.xml  mask-013.xml  mask-014.xml  mask-015.xml  mask-016.xml  mask-017.xml  mask-018.xml  mask-020.xml  mask-021.xml  mask-022.xml  mask-024.xml  mask-025.xml  mask-026.xml  mask-027.xml  mask-029.xml  mask-030.xml  mask-031.xml  mask-033.xml  mask-034.xml  mask-035.xml  mask-037.xml  mask-038.xml  mask-039.xml  mask-040.xml  mask-044.xml  mask-045.xml  mask-046.xml  mask-048.xml  mask-049.xml  mask-050.xml  (+642 more)
MaskedFace/val/: mask-011.xml  mask-019.xml  mask-023.xml  mask-032.xml  mask-036.xml  mask-041.xml  mask-043.xml  mask-058.xml  mask-080.xml  mask-086.xml  mask-094.xml  mask-095.xml  mask-098.xml  mask-123.xml  mask-130.xml  mask-131.xml  mask-139.xml  mask-143.xml  mask-148.xml  mask-149.xml  mask-152.xml  mask-169.xml  mask-180.xml  mask-182.xml  mask-184.xml  mask-197.xml  mask-201.xml  mask-209.xml  mask-226.xml  mask-227.xml  mask-248.xml  mask-256.xml  mask-260.xml  mask-269.xml  mask-275.xml  mask-280.xml  mask-286.xml  mask-292.xml  mask-296.xml  mask-305.xml  (+45 more)
cnn/: dataset.py  draw.py  metrics.py  model.py  transforms.py  utils.py
src/mask/: dataset.py  draw.py  metrics.py  model.py  oversampling.py  transforms.py  utils.py
